# Smart-Campus

./: .gitmodules  README_FIRST.md  UML Diagrams.md  pyproject.toml
docs/: DATASETS.md
ml/explainability/: shap_explainer.py
ml/models/: base.py  enrollment_predictor.py  room_optimizer.py  versioning.py
ml/training/: train_enrollment_predictor.py
services/academic_service/: aggregates.py  enrollment_service.py  grpc_server.py  grpc_service.py  main.py  models.py
services/academic_service/api/: admin.py  assignments.py  courses.py  enrollments.py  grades.py  lecturer.py  sections.py
services/analytics_service/: main.py
services/api_gateway/: main.py  middleware.py
services/api_gateway/routers/: academic.py  admin.py  analytics.py  auth.py  facilities.py  facility.py  health.py  lecturer.py  users.py
services/api_gateway/services/: report_service.py
services/consensus_service/: main.py
services/facility_service/: main.py  models.py
services/facility_service/api/: admin.py  rooms.py
services/scheduler_service/: constraint_solver.py  enrollment_integration.py  main.py
services/security_service/: gdpr_erasure.py  main.py
services/security_service/api/: gdpr.py
services/user_service/: auth_utils.py  dependencies.py  main.py  models.py  repository.py
services/user_service/api/: admin.py  auth.py  roles.py  users.py
shared/: config.py
shared/api/: versioning.py
shared/concurrency/: locking.py
shared/consensus/: __init__.py  raft.py
shared/database/: __init__.py  mongodb.py  postgres.py  redis.py
shared/domain/: __init__.py  academic.py  audit.py  entities.py  events.py  exceptions.py  facilities.py  ml.py  plugins.py  policies.py  reports.py  scheduler.py  security.py
shared/events/: __init__.py  academic_events.py  aggregate.py  base.py  security_events.py  store.py  stream.py
shared/resilience/: circuit_breaker.py  ml_fallback.py  service_client.py
shared/security/: __init__.py  audit.py  encryption.py  rbac.py
shared/verification/: __init__.py  enrollment_invariants.py
